# prompt-router

./: .gitignore  README.md  main.py  pyproject.toml
router/: __init__.py  classifier.py  claude_client.py  config.py  ollama_client.py
ui/: app.py
